added new endpoint to get users and fixed cors
